Do not fix button width to avoid clipping (#5455)
svn changeset:16576/svn branch:6.5

--- a/WebContent/VAADIN/themes/contacts/styles.css
+++ b/WebContent/VAADIN/themes/contacts/styles.css
@@ -9,7 +9,6 @@
 
 .toolbar .v-button {
       display: block;
-      width: 65px;
       height: 55px;
       background: transparent;
       border: none;
